@@ -1,0 +1,15 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+Devolo Smoke Detector MT 2651
+https://products.z-wavealliance.org/products/2230
+ -->
+<Product xmlns="http://code.google.com/p/open-zwave/">
+    <!-- the Device Doesn't support Get for Alarm Class -->
+	<CommandClass id="113" getsupported="false"/>
+    <!-- Association Groups -->
+    <CommandClass id="133">
+      <Associations num_groups="1">
+        <Group index="1" max_associations="5" label="Lifeline" />
+      </Associations>
+    </CommandClass>
+</Product>
