@@ -217,6 +217,7 @@ Version 1.5
  - Add Aeotec ZWA003 NanoMote Quad (Nechry)
  - Add Aeotec ZWA004 NanoMote One (Nechry)
  - Add Aeotec ZWA005 TriSensor (Nechry)
+ - Add Devolo Smoke Detector MT02651 (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
